--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/cors": "^2.8.19",
     "@types/jest": "^30.0.0",
     "@types/pg": "^8.15.4",
+    "@types/supertest": "^6.0.3",
     "drizzle-kit": "^0.31.4",
     "jest": "^30.0.4",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
