--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/k6": "^1.1.1",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
