--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/k6": "^1.1.1",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
